# idor-hunter-lite

./: LICENSE  README.md  config.yaml  http_proxy  pyproject.toml  requirements.txt
src/idor/: config.py  http_client.py  models.py  scanner.py
